[metadata]
name = schemdraw
version = attr: schemdraw.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://schemdraw.readthedocs.io
description = Electrical circuit schematic drawing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = circuit, schematic, electrical, flowchart, logic
license = MIT
project_urls =
    Documentation = https://schemdraw.readthedocs.io
    Source Code = https://github.com/cdelker/schemdraw
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
include_package_data = True

[options.extras_require]
matplotlib = matplotlib>=3.4
svgmath = ziafont>=0.8; ziamath>=0.10; latex2mathml

[options.package_data]
schemdraw = py.typed
